##Text encoding: utf-8

2011-07-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavagesdlg.cc: really implement cleavage change.
	* libs/gcr/grid.cc: make it start being really usable.

2011-07-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavagesdlg.cc: implement cleavage change.
	* libs/gcr/cleavagesdlg.h: ditto.
	* libs/gcr/document.cc: add a new method to check cleavages list coherence.
	* libs/gcr/document.h: ditto.
	* libs/gcr/grid.cc: more keyboard interaction.
	* libs/gcu/chem3ddoc.cc: fixed model position.
	* libs/gcu/dialog-owner.cc: make GetDialog() const.
	* libs/gcu/dialog-owner.h: ditto.
	* libs/gcugtk/dialog.cc: add a Closed() virtual method.
	* libs/gcugtk/dialog.h: ditto.

2011-07-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: start interacting with the keyboard.

2011-07-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavagesdlg.cc: removed obsolete code.
	* libs/gcr/cleavagesdlg.h: ditto.
	* libs/gcr/grid.cc: display a cursor.

2011-07-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavagesdlg.cc: make this dialog instant apply.
	* libs/gcr/cleavagesdlg.h: ditto.
	* libs/gcr/document.h: set the Update() method virtual.
	* libs/gcr/grid.cc: implement row deletion and horizontal expansion.
	* libs/gcr/grid.h: ditto.
	* ui/crystal/cleavages.ui: removed obsolete buttons.

2011-07-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: update libspreadsheet required version.
	* libs/gcr/grid.cc: implement scrolling.

2011-07-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: use next gnumeric API (tentative).
	* libs/gcr/cleavagesdlg.cc: redesigned.
	* libs/gcr/grid.cc: add row headers and a vertical scrollbar.
	* programs/crystal/docprop.cc: fixed window title when document title
	is empty.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.
	* ui/crystal/cleavages.ui: redesigned.
